--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                           <div class="col-10 col-lg-8">
                         <h2 class="display-2 text-white animated slideInDown">Pioneers in Solar Energy Solutions</h2>
                           <p class="fs-5 fw-medium text-white mb-4 pb-3">Powering your home and business with clean, efficient, and reliable solar power.</p>
-                        <a href="" class="btn btn-primary rounded-pill py-2 px-3 animated slideInLeft" style="margin-top: 20px;">Read About Us</a>
+                        <a href="" class="btn btn-primary rounded-pill py-3 px-3 animated slideInLeft" style="margin-top: 20px;"><b>Read About Us</b></a>
                   </div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-2 text-white animated slideInDown">Harness the power of the Sun</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Reducing your energy cost with our innovative Solar Power Systems.</p>
-                                <a href="" class="btn btn-primary rounded-pill py-2 px-3 animated slideInLeft" style="margin-top: 20px;">Get a Quote Now</a>
+                                <a href="" class="btn btn-primary rounded-pill py-3 px-3 animated slideInLeft" style="margin-top: 20px;"><b>Get a Quote Now</b></a>
                             </div>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
                             <div class="col-10 col-lg-8">
                                 <h2 class="display-2 text-white animated slideInDown">Your Trusted Partner in Solar Solutions</h2>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Lightening up our homes and streets with various Solar Lights</p>
-                                <a href="" class="btn btn-primary rounded-pill py-2 px-3 animated slideInLeft" style="margin-top: 20px;">Check our Product Store</a>
+                                <a href="" class="btn btn-primary rounded-pill py-2 px-3 animated slideInLeft" style="margin-top: 20px;"><b>Visit our Product Store</b></a>
                             </div>
                         </div>
                     </div>
@@ -192,7 +192,124 @@
     </div>
     <!-- Feature End -->
 
-            
+       <!-- About Start -->
+<div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+    <div class="container about px-lg-0">
+        <div class="row g-0 mx-lg-0">
+            <div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
+                <div class="position-relative h-100">
+                    <img class="position-absolute img-fluid w-100 h-100" src="img/about.jpg" style="object-fit: cover;" alt="About Tasha Solar">
+                </div>
+            </div>
+            <div class="col-lg-6 about-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                <div class="p-lg-5 pe-lg-0">
+                    <h6 class="text-primary">About Us</h6>
+                    <h1 class="mb-4">Over 25 Years of Expertise in Solar & Renewable Energy</h1>
+                    <p>At Tasha Solar, we specialize in providing innovative and sustainable solar energy solutions for homes and businesses. With over 25 years of experience in the renewable energy sector, we ensure high-quality service and reliable products for all your energy needs.</p>
+                    <p><i class="fa fa-check-circle text-primary me-3"></i>High-efficiency solar inverters</p>
+                    <p><i class="fa fa-check-circle text-primary me-3"></i>Expert installation and maintenance services</p>
+                    <p><i class="fa fa-check-circle text-primary me-3"></i>Committed to sustainability and energy savings</p>
+                    <a href="#" class="btn btn-primary rounded-pill py-3 px-5 mt-3">Learn More About Us</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- About End -->
+
+
+<!-- Service Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+            <h6 class="text-primary">Our Services</h6>
+            <h1 class="mb-4">Leading the Way in Renewable Energy Solutions</h1>
+        </div>
+        <div class="row g-4">
+            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="service-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/img-600x400-1.jpg" alt="Solar Panels">
+                    <div class="position-relative p-4 pt-0">
+                        <div class="service-icon">
+                            <i class="fa fa-solar-panel fa-3x"></i>
+                        </div>
+                        <h4 class="mb-3">Solar Panels</h4>
+                        <p>We offer high-performance solar panels to power your home or business efficiently. Reliable, cost-effective, and eco-friendly energy solutions.</p>
+                        <a class="small fw-medium" href="#">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="service-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/img-600x400-2.jpg" alt="Wind Turbines">
+                    <div class="position-relative p-4 pt-0">
+                        <div class="service-icon">
+                            <i class="fa fa-wind fa-3x"></i>
+                        </div>
+                        <h4 class="mb-3">Wind Turbines</h4>
+                        <p>Explore our wind turbine solutions that harness the power of wind to provide sustainable, renewable energy for your needs.</p>
+                        <a class="small fw-medium" href="#">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="service-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/img-600x400-3.jpg" alt="Hydropower Plants">
+                    <div class="position-relative p-4 pt-0">
+                        <div class="service-icon">
+                            <i class="fa fa-lightbulb fa-3x"></i>
+                        </div>
+                        <h4 class="mb-3">Hydropower Plants</h4>
+                        <p>Harness the power of water with our hydroelectric solutions for a continuous and eco-friendly energy source.</p>
+                        <a class="small fw-medium" href="#">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="service-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/img-600x400-4.jpg" alt="Solar Energy Storage">
+                    <div class="position-relative p-4 pt-0">
+                        <div class="service-icon">
+                            <i class="fa fa-solar-panel fa-3x"></i>
+                        </div>
+                        <h4 class="mb-3">Solar Energy Storage</h4>
+                        <p>Maximize your energy efficiency with our solar energy storage solutions, ensuring power even when the sun isn’t shining.</p>
+                        <a class="small fw-medium" href="#">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="service-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/img-600x400-5.jpg" alt="Wind Turbine Installation">
+                    <div class="position-relative p-4 pt-0">
+                        <div class="service-icon">
+                            <i class="fa fa-wind fa-3x"></i>
+                        </div>
+                        <h4 class="mb-3">Wind Turbine Installation</h4>
+                        <p>Our expert team provides professional installation of wind turbines to help you harness the wind’s potential for clean energy.</p>
+                        <a class="small fw-medium" href="#">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="service-item rounded overflow-hidden">
+                    <img class="img-fluid" src="img/img-600x400-6.jpg" alt="Hydropower Energy Solutions">
+                    <div class="position-relative p-4 pt-0">
+                        <div class="service-icon">
+                            <i class="fa fa-lightbulb fa-3x"></i>
+                        </div>
+                        <h4 class="mb-3">Hydropower Energy Solutions</h4>
+                        <p>Efficient, sustainable hydropower solutions tailored to meet your energy demands while reducing your carbon footprint.</p>
+                        <a class="small fw-medium" href="#">Read More<i class="fa fa-arrow-right ms-2"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Service End -->
+
+    
     <!-- About Start -->
     <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
         <div class="container about px-lg-0">
