--- a/index.html
+++ b/index.html
@@ -474,6 +474,35 @@
 <!-- Projects End -->
 
 
+   <!-- Quote Start -->
+<div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+    <div class="container quote px-lg-0">
+        <div class="row g-0 mx-lg-0">
+            <div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
+                <div class="position-relative h-100">
+                    <img class="position-absolute img-fluid w-100 h-100" src="img/quote.jpg" style="object-fit: cover;" alt="">
+                </div>
+            </div>
+            <div class="col-lg-6 quote-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                <div class="p-lg-5 pe-lg-0">
+                    <h6 class="text-primary">Get Started with Solar!</h6>
+                    <h1 class="mb-4">Get Your Solar System Requirements & Estimate</h1>
+                    <p class="mb-4 pb-2">Use our Solar System Calculator to get a personalized estimate for your solar inverter system. Follow these steps:</p>
+                    <ol class="mb-4 pb-2">
+                        <li>Enter your correct personal details.</li>
+                        <li>Select and enter the quantities of all appliances you want to run on the solar inverter system.</li>
+                        <li>Press the calculate button and allow the system to generate your requirements and estimated cost.</li>
+                        <li>Chat with one of our experts using the generated button link to discuss your needs further and get more personalized service.</li>
+                    </ol>
+                    <a href="solar-calculator.html" class="btn btn-primary rounded-pill py-3 px-5">Go to Solar Calculator</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Quote End -->
+
+    
     <!-- Quote Start -->
     <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
         <div class="container quote px-lg-0">
@@ -583,6 +612,61 @@
         </div>
     </div>
     <!-- Team End -->
+
+    <!-- Testimonial Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+            <h6 class="text-primary">Testimonial</h6>
+            <h1 class="mb-4">What Our Clients Say!</h1>
+        </div>
+        <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
+            <!-- Testimonial 1 -->
+            <div class="testimonial-item text-center">
+                <div class="testimonial-img position-relative">
+                    <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-1.jpg" alt="Client 1">
+                    <div class="btn-square bg-primary rounded-circle">
+                        <i class="fa fa-quote-left text-white"></i>
+                    </div>
+                </div>
+                <div class="testimonial-text text-center rounded p-4">
+                    <p>"Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita."</p>
+                    <h5 class="mb-1">John Doe</h5>
+                    <span class="fst-italic">CEO, SolarTech</span>
+                </div>
+            </div>
+            <!-- Testimonial 2 -->
+            <div class="testimonial-item text-center">
+                <div class="testimonial-img position-relative">
+                    <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-2.jpg" alt="Client 2">
+                    <div class="btn-square bg-primary rounded-circle">
+                        <i class="fa fa-quote-left text-white"></i>
+                    </div>
+                </div>
+                <div class="testimonial-text text-center rounded p-4">
+                    <p>"Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita."</p>
+                    <h5 class="mb-1">Jane Smith</h5>
+                    <span class="fst-italic">Marketing Director, Green Energy Solutions</span>
+                </div>
+            </div>
+            <!-- Testimonial 3 -->
+            <div class="testimonial-item text-center">
+                <div class="testimonial-img position-relative">
+                    <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-3.jpg" alt="Client 3">
+                    <div class="btn-square bg-primary rounded-circle">
+                        <i class="fa fa-quote-left text-white"></i>
+                    </div>
+                </div>
+                <div class="testimonial-text text-center rounded p-4">
+                    <p>"Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita."</p>
+                    <h5 class="mb-1">Michael Green</h5>
+                    <span class="fst-italic">Founder, EcoPower</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Testimonial End -->
 
 
     <!-- Testimonial Start -->
